<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="80dp"
    android:gravity="center_horizontal"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/error_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:contentDescription="@string/error_title"
        android:scaleType="center"
        android:src="@drawable/error" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/error_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_title"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/error_reason_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/error_reason_title"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/error_reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/error_reason_title"
            android:paddingLeft="20dp"
            android:textColor="@color/white"
            android:textIsSelectable="true"
            android:textSize="22sp" />

        <Button
            android:id="@+id/error_log_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/error_detail"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/error_recovery_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/error_recovery_title"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/error_refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:alpha="50"
            android:background="@drawable/btn_transparent"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/error_refresh_home"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/error_recovery_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:alpha="50"
            android:background="@drawable/btn_transparent"
            android:onClick="onRecoveryButtonClicked"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:text="@string/error_recovery"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/error_contact_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/error_contact"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>

</LinearLayout>